@@ -1,4 +1,5 @@
 Makefile
+Makefile.in
 .deps
 op_session
 op_help
